--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+bunsen-configs (13.0-1) carbon; urgency=medium
+
+  * Migrate for Debian Bookworm
+    - debian/control: Bump Standards-Version to 4.6.2
+
+ -- John Crawley <john@bunsenlabs.org>  Fri, 07 Jun 2024 15:22:53 +0900
+
 bunsen-configs (12.6-1) boron; urgency=medium
 
   * Add new package bunsen-configs-base.
